# civic-info-data-scraper-litmus-test

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  instruction.md  pyproject.toml  task.md  zip_data_v2_rows - LLM Run.csv
app/: agent.py  config.py  excel_reader.py  excel_writer.py  logging_config.py  main.py  matcher.py  models.py  reporter.py  runner.py  validator.py
config/: settings.toml
config/prompts/: civic_lookup.md
docs/adr/: 0001-zip-forward-fill-read-only.md  0002-one-model-per-run-accumulate.md  0003-workbook-is-role-source-of-truth.md
tests/: test_agent.py  test_config.py  test_excel_reader.py  test_excel_writer.py  test_matcher.py  test_models.py  test_reporter.py  test_runner.py  test_validator.py
