[project]
name = "civic-info-benchmark"
version = "0.1.0"
description = "Benchmarking system for evaluating LLMs on US civic representative discovery"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.0.14",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
app = "app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
